<resources>
    <string name="app_name">EscuelaVirtual</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_repeat_password">Repetir Contraseña</string>
    <string name="prompt_name">Nombre</string>

    <string name="prompt_register">¿No tenés cuenta? <u>Registrate</u></string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_register">Crear Cuenta</string>

    <string name="error_invalid_email">Esta dirección de email es inválida</string>
    <string name="error_invalid_password">Contraseña Inválida</string>
    <string name="error_incorrect_password">Contraseña Incorrecta</string>
    <string name="error_field_required">Campo Requerido</string>
    <string name="error_aut">Autenticación Fallida</string>
    <string name="error_weak_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_user_exists">El mail ya se encuentra en uso</string>
    <string name="error_distinct_password">Las 2 contraseñas no coinciden</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="logout">Cerrar Sesión</string>

    <!-- Titulos -->
    <string name="title_activity_login">Escuela Virtual - Login</string>
    <string name="bar_main_title">Escuela Virtual</string>
    <string name="bar_curso_title">Curso XX</string>
    <string name="bar_curso_add_title">Agregar Curso</string>

    <!--Testeo para RecyclerView - Hardcodeo de nombres-->
    <string name="curso_1">Curso 1</string>
    <string name="curso_2">Curso 2</string>
    <string name="curso_3">Curso 3</string>
    <string name="curso_4">Curso 4</string>
    <string name="curso_5">Curso 5</string>
    <string name="curso_6">Curso 6</string>
    <string name="curso_7">Curso 7</string>
    <string name="curso_8">Curso 8</string>
    <string name="curso_9">Curso 9</string>
    <string name="ejercicio_1">Ejercicio 1</string>
    <string name="ejercicio_2">Ejercicio 2</string>
    <string name="ejercicio_3">Ejercicio 3</string>
    <string name="ejercicio_4">Ejercicio 4</string>
    <string name="ejercicio_5">Ejercicio 5</string>
    <string name="ejercicio_6">Ejercicio 6</string>
    <string name="ejercicio_7">Ejercicio 7</string>
    <string name="ejercicio_8">Ejercicio 8</string>
    <string name="ejercicio_9">Ejercicio 9</string>
</resources>
